# sandbox-cpp

./: .env.sample  .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docker/cpp/: Dockerfile
docs/: notes.md
src/: main.cpp
src/hello_world/: CMakeLists.txt
tests/: CMakeLists.txt
tests/hello_gtest/: CMakeLists.txt
